Sun Jan 27 22:13:02  Kristian Rietveld  <kris@gtk.org>

	Fix for bug #69586

	* gtk/gtktreeprivate.h: get rid of tab_offset, introduce
	expander_size

	* gtk/gtktreeview.c: get rid of ->priv->tab_offset, introduce
	expander_size caching (from style), fix CELL_HEIGHT macro,
	use MAX ("RBNODE_HEIGHT", expander_size) (differs per case) for
	row height calculation, added style_set callback

2002-01-27  Anders Carlsson  <andersca@gnu.org>

	* gtk/gtklabel.c (gtk_label_create_window): Set the cursor to
	GDK_XTERM.

	* gtk/gtktextview.h (struct _GtkTextView): add mouse_cursor_obscured.

	* gtk/gtkentry.h (struct _GtkEntry): Add mouse_cursor_obscured.

	* gtk/gtktextview.c (set_invisible_cursor): New function.
	(gtk_text_view_obscure_mouse_cursor): Likewise.
	(gtk_text_view_key_press_event): Call obscure_cursor if text 
	has been inserted.
	(gtk_text_view_motion_event): Restore the mouse cursor.

	* gtk/gtkentry.c (gtk_entry_realize): Add GDK_POINTER_MOTION_MASK.
	(set_invisible_cursor): New function.
	(gtk_entry_obscure_mouse_cursor): Likewise.
	(gtk_entry_key_press): call obscure_cursor if text has been inserted.
	(gtk_entry_motion_notify): Restore the mouse cursor.

2002-01-27  Sven Neumann  <sven@gimp.org>

	* gtk/gtkstyle.c (sanitize_size): removed unused return value.

Sat Jan 26 19:27:23 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtksocket.c (gtk_socket_grab_notify): Don't
	send MODALITY_ON/OFF if socket->same_app (More fixes for #69735)

Sat Jan 26 19:04:37 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkmain.c (check_is_grabbed): Return FALSE not true
	in the grab_widget == NULL case. (Bug reported by 
	Padraig O'Briain, #69735)

	* gtk/gtkplug.c (handle_modality_on): Realize the modality
	window so gtk_widget_event() doesn't complain :-((((.

2002-01-25  Federico Mena Quintero  <federico@ximian.com>

	Merge from gdk-pixbuf stable.

	* gdk/gdkpixbuf-drawable.c (rgb565msb): Fixed the endianness